@@ -376,7 +376,7 @@ warn_about_unrecognized_names = true
 ; Overrides the rules for when units are eligible to retreat based on their movement. The possible options are:
 ;   standard: No change from base game rules
 ;   none: No units will ever retreat
-;   all-units: All units may retreat, even if they have only one move or are up against a faster opponent
+;   all-units: All non-immobile units may retreat, even if they have only one move or are up against a faster opponent
 ;   if-faster: Units may retreat when they are faster than their opponent, for example a cavalry may retreat from a knight
 ; These settings don't change the fact that units cannot retreat when they start combat with 1 HP or are defending a city. They also do not change
 ; that naval units cannot retreat defensively (there is a separate option for that below).
