@@ -1,5 +1,6 @@
 - Apply the stack limit separately to land, sea, and air units
 - Option to exclude cities from the unit stack limit
+- Do not apply all-units special retreat rule to immobile units
 - Fix unit stack limit blocking combat
 
 - Allow perfume amounts to be specified as percentages
